--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ footer p {
 	margin-left: 10%;
 }
 
-.hiddenBody p, .hiddenBody h3, .textGroup p {
+.hiddenBody *, .textGroup * {
 	margin-top: 1.5%;
 	margin-bottom: 1.5%;
 }
