--- a/style.css
+++ b/style.css
@@ -46,6 +46,12 @@ footer p {
 	margin: 0;
 }
 
+kbd {
+	border-radius: 2px;
+	padding: 2px;
+	border: 1px solid black;
+}
+
 #bookContainer {
 	width: 95%;
 }
